[project]
name = "store-navigator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "David Birks", email = "david@birks.dev" }
]
dependencies = [
    "streamlit>=1.35.0",
    "cdktf>=0.20.7",
    "cdktf-cdktf-provider-azurerm>=12.18.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/store_navigator"]

[tool.rye.scripts]
dev = "streamlit run main.py"
